src/test/deca/syntax/valid/if_then_sans_else.deca
// Description:
//    if,elsif sans else 
//
// Resultats:
//    ok

{ if (true) {
	3;
	}
  else if (false) {
  2;
  }
  }
